# first-python-package

./: .gitignore  LICENSE  README.md  setup.cfg
src/imppkg/: harmonic_mean.c  harmony.py
test/: test_harmonic_mean.py
