[metadata]
name = first-python-package
version = 0.0.1
url = https://github.com/cc314/first-python-package
author = cc314
author_email = chenchao162735@gmail.com
description = This package does amazing things
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires = termcolor>=1.1.0, <2
[options.packages.find]
where = src
exclude =
    test*
[options.entry_points]
console_scripts =
    harmony = imppkg.harmony:main

#######################
# Tools configuration #
#######################

[tool:pytest]
testpaths = test
addopts = --cov

[coverage:run]
source = imppkg
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/imppkg/
    */site-packages/imppkg/

[tox:tox]
isolated_build = True
envlist =  py310

[testenv]
deps =
    pytest
    pytest-cov
    pytest-randomly

commands =
    pytest {posargs}
